ops/k8s/services/cloudsql-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  name: cloudsql-proxy-service
  namespace: data-repo
spec:
  selector:
    app: cloudsql-proxy
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
