ops/k8s/services/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
spec:
  selector:
    name: grafana-deployment
  ports:
  - protocol: TCP
    port: 3000
  type: NodePort
