ops/k8s/services/oidc-proxy-service.yaml
kind: Service
apiVersion: v1
metadata:
  namespace: data-repo
  name: oidc-proxy-service
spec:
  ports:
  - protocol: TCP
    name: http
    port: 80
    targetPort: 80
  - protocol: TCP
    name: https
    port: 443
    targetPort: 443
  type: NodePort
  selector:
    service: oidc
    environment: integration
    project: datarepo
