ops/k8s/services/sql-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  name: cloudsql-proxy
  namespace: data-repo
spec:
  selector:
    app: cloudsql-proxy
  ports:
  - port: 5432
    protocol: TCP
    targetPort: db-port
